Fixed the scrolling and spacing of the About Us heading and pictures.

--- a/src/main/resources/static/css/aboutUs.css
+++ b/src/main/resources/static/css/aboutUs.css
@@ -1,3 +1,12 @@
+body, html {
+    height: 100%;
+    width: 100%;
+}
+
+body {
+    overflow: hidden;
+}
+
 .card-header {
     min-height: 300px;
     max-height: 300px;
@@ -60,7 +69,7 @@
     box-shadow: 2px 2px 30px #aaaaaa;
 }
 .row.space-rows {
-    margin: 40px;
+    margin:1rem;
 }
 .col {
     padding: 20px 7px 0px 7px;
@@ -88,12 +97,12 @@
     color: pink;
     background-color: white;
 }
-section {
-    width: 100%;
-    height: 100vh;
-}
+/*section {*/
+/*    width: 100%;*/
+/*    height: 100vh;*/
+/*}*/
 .text-center {
-    margin-top: 200px;
+    margin-top: 3rem;
 }
 img {
     border-style: none;
